--- a/map.html
+++ b/map.html
@@ -32,19 +32,18 @@
         }
 
         #map-svg {
-            transform-origin: center center;
-            transition: transform 0.1s ease-out; /* Smooth zoom */
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
             object-fit: contain;
-            user-select: none; /* Prevent text selection while dragging */
+            image-rendering: pixelated; /* crisp pixels when scaled */
+            /* or use 'crisp-edges' if pixelated is too sharp */
         }
 
         .poi {
             cursor: pointer;
             fill: #ff4444;
             stroke: white;
-            stroke-width: 1.5;
+            stroke-width: 1.5px; /* add px for validator happiness */
             opacity: 0.85;
         }
 
@@ -105,12 +104,15 @@
 
         // Function to convert game → SVG pixel coords
         function gameToSvgCoords(poi, scene) {
-            const bounds = sceneBounds[scene] || { minX: -500, maxX: 500, minY: -100, maxY: 500 }; // fallback
+            const bounds = sceneBounds[scene] || { minX: -500, maxX: 500, minY: -100, maxY: 500 };
 
+            // Normalize X (left-right stays the same)
             const relX = (poi.x - bounds.minX) / (bounds.maxX - bounds.minX);
-            const relY = (poi.y - bounds.minY) / (bounds.maxY - bounds.minY);
 
-            // Scale to actual image pixels (Inkscape size)
+            // Invert Y: flip min/max and normalize so higher game Y → lower SVG Y
+            const relY = 1 - (poi.y - bounds.minY) / (bounds.maxY - bounds.minY);
+
+            // Scale to image pixels
             const svgX = relX * 3203;
             const svgY = relY * 3803;
 
