--- a/map.html
+++ b/map.html
@@ -258,7 +258,7 @@
 
                 // This is where you can hardcode for testing:
                 //currentScene = 'LakeRegion';
-                currentScene = 'CanneryRegion';
+                currentScene = 'MiningRegion';
                 //currentDifficulty = 'easy';
                 currentDifficulty = 'hard';
 
