--- a/map.html
+++ b/map.html
@@ -10,21 +10,14 @@
             padding: 0;
             height: 100%;
             overflow: hidden;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #111;
-            color: #eee;
+            background: #000;
         }
 
         #map-container {
             width: 100vw;
             height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            position: relative;
             background: #000;
-            overflow: hidden;
-            touch-action: none; /* Improves touch experience */
-            cursor: grab; /* Visual hint */
         }
 
         #map-container:active {
@@ -32,11 +25,13 @@
         }
 
         #map-svg {
+            position: absolute;
+            inset: 0; /* top:0; left:0; right:0; bottom:0; */
             width: 100%;
             height: 100%;
-            object-fit: contain;
-            image-rendering: pixelated; /* crisp pixels when scaled */
-            /* or use 'crisp-edges' if pixelated is too sharp */
+            object-fit: contain; /* Keeps aspect ratio, centers the map */
+            image-rendering: pixelated; /* Sharp when scaled down */
+            background: #000; /* Fallback color if image fails */
         }
 
         .poi {
