--- a/map.html
+++ b/map.html
@@ -16,22 +16,23 @@
         #map-container {
             width: 100vw;
             height: 100vh;
-            position: relative;
+            display: flex;
+            justify-content: center; /* Horizontal center */
+            align-items: center; /* Vertical center */
             background: #000;
+        }
+
+        #map-svg {
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            image-rendering: pixelated; /* Sharp scaling */
         }
 
         #map-container:active {
             cursor: grabbing; /* When dragging */
-        }
-
-        #map-svg {
-            position: absolute;
-            inset: 0; /* top:0; left:0; right:0; bottom:0; */
-            width: 100%;
-            height: 100%;
-            object-fit: contain; /* Keeps aspect ratio, centers the map */
-            image-rendering: pixelated; /* Sharp when scaled down */
-            background: #000; /* Fallback color if image fails */
         }
 
         .poi {
