--- a/map.html
+++ b/map.html
@@ -9,26 +9,27 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            width: 100%;
             overflow: hidden;
             background: #000;
         }
 
         #map-container {
+            position: relative;
             width: 100vw;
             height: 100vh;
-            display: flex;
-            justify-content: center; /* Horizontal center */
-            align-items: center; /* Vertical center */
             background: #000;
         }
 
         #map-svg {
-            max-width: 100%;
-            max-height: 100%;
-            width: auto;
-            height: auto;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             object-fit: contain;
-            image-rendering: pixelated; /* Sharp scaling */
+            image-rendering: pixelated;
+            background: #000;
         }
 
         #map-container:active {
@@ -77,7 +78,7 @@
         const SERVER_URL = 'http://localhost:8080';
         const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
-        const version = '1.0.0';
+        const version = '1.0.1';
 
         // Add these variables near the top of <script>
         let scale = 1.0;
