--- a/map.html
+++ b/map.html
@@ -8,8 +8,8 @@
         html, body {
             margin: 0;
             padding: 0;
-            height: 100%;
             width: 100%;
+            height: 100%;
             overflow: hidden;
             background: #000;
         }
@@ -27,6 +27,8 @@
             left: 0;
             width: 100%;
             height: 100%;
+            min-width: 100%;
+            min-height: 100%;
             object-fit: contain;
             image-rendering: pixelated;
             background: #000;
@@ -78,7 +80,7 @@
         const SERVER_URL = 'http://localhost:8080';
         const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
-        const version = '1.0.2';
+        const version = '1.0.3';
 
         // Add these variables near the top of <script>
         let scale = 1.0;
