--- a/map.html
+++ b/map.html
@@ -314,8 +314,8 @@
             // Add map image
             const image = document.createElementNS('http://www.w3.org/2000/svg', 'image');
             image.setAttribute('href', mapUrl);
-            image.setAttribute('width', '1920');
-            image.setAttribute('height', '1080');
+            // image.setAttribute('width', '1920');
+            // image.setAttribute('height', '1080');
             image.setAttribute('preserveAspectRatio', 'xMidYMid meet');
             svg.appendChild(image);
 
