Make POI circle cyan fill.

--- a/map.html
+++ b/map.html
@@ -334,7 +334,8 @@
                     const circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
                     circle.setAttribute('cx', svgX);
                     circle.setAttribute('cy', svgY);
-                    circle.setAttribute('r', '12');
+                    circle.setAttribute('r', '24');
+                    circle.setAttribute('fill', 'cyan');           // or '#00FFFF' or 'rgb(0, 255, 255)'
                     circle.classList.add('poi');
 
                     // SVG description (tooltip)
