--- a/map.html
+++ b/map.html
@@ -80,7 +80,7 @@
         const SERVER_URL = 'http://localhost:8080';
         const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
-        const version = '1.0.5';
+        const version = '1.0.7';
 
         // Add these variables near the top of <script>
         let scale = 1.0;
@@ -330,12 +330,13 @@
 
                 pois.forEach(poi => {
                     const { svgX, svgY } = gameToSvgCoords(poi, currentScene);
+                    poi.fill = poi.fill || 'cyan';
 
                     const circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
                     circle.setAttribute('cx', svgX);
                     circle.setAttribute('cy', svgY);
                     circle.setAttribute('r', '24');
-                    circle.setAttribute('fill', 'cyan');           // or '#00FFFF' or 'rgb(0, 255, 255)'
+                    // circle.setAttribute('fill', 'cyan');           // or '#00FFFF' or 'rgb(0, 255, 255)'
                     circle.classList.add('poi');
 
                     // SVG description (tooltip)
