Hardcoded POI coords

--- a/map.html
+++ b/map.html
@@ -81,7 +81,7 @@
         const SERVER_URL = 'http://localhost:8080';
         const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
-        const version = '1.0.11';
+        const version = '1.0.12';
 
         // Add these variables near the top of <script>
         let scale = 1.0;
@@ -331,8 +331,20 @@
 
                 pois.forEach(poi => {
                     const { svgX, svgY } = gameToSvgCoords(poi, currentScene);
-                    //poi.fill = poi.fill || 'cyan';
-                    //poi.fill = '#00FFFF';
+
+                    // TEMPORARY DEBUG OVERRIDE - comment out after testing
+                    if (poi.label.includes("Welkin's Window cave")) {
+                        svgX = 1491.89;  // From your harvested data
+                        svgY = 1870.06;
+                    }
+                    if (poi.label.includes("Idle Camp Mess Hall")) {
+                        svgX = 1480.60;
+                        svgY = 626.28;
+                    }
+                    if (poi.label.includes("Smoker's cave")) {
+                        svgX = 137.74;
+                        svgY = 1360.99;
+                    }
 
                     const circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
                     circle.setAttribute('cx', svgX);
