--- a/map.html
+++ b/map.html
@@ -105,7 +105,8 @@
                 // This is where you can hardcode for testing:
                 //currentScene = 'LakeRegion';
                 //currentScene = 'MiningRegion';
-                currentScene = 'RavineTransitionZone';
+                //currentScene = 'RavineTransitionZone';
+                currentScene = 'RuralRegion';
                 //currentDifficulty = 'easy';
                 currentDifficulty = 'hard';
 
