--- a/map.html
+++ b/map.html
@@ -83,9 +83,11 @@
     <script>
         const version = '1.0.27';
         const SERVER_URL = 'http://localhost:8080';
-        const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
-        const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
-        const CALIBRATION_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/calibration/';
+        //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
+        const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
+        //const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
+        const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/pois/';
+        //const CALIBRATION_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/calibration/';
 
         let currentScene = null;
         let currentDifficulty = 'easy';
