--- a/map.html
+++ b/map.html
@@ -103,8 +103,10 @@
         // Override server values with URL params (for debug/testing)
         // If param is missing, we will use what the TLD server returned
         // Also, note that both params are trimmed and the difficult param is lowercased for consistency
-        const urlScene = getQueryParam('scene').trim();
-        const urlDifficulty = getQueryParam('difficulty').trim().toLowerCase();
+        const urlScene = getQueryParam('scene')?.trim() || null;
+        const urlDifficulty = getQueryParam('difficulty')?.trim().toLowerCase() || null;
+
+        console.log(`Version ${version}: URL parameters - scene: "${urlScene}", difficulty: "${urlDifficulty}"`);
 
         // === Fetch current scene + difficulty ===
         async function getCurrentGameState() {
